--- a/package.json
+++ b/package.json
@@ -9,13 +9,49 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-material/core": "^1.3.7",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-top-tabs": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "@sanar/react-native-highlight-text": "^1.0.2",
+    "@tanstack/react-query": "^4.29.5",
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.71.7",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.7.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-social-buttons": "^1.2.0",
+    "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.5.1",
+    "react-native-toast-notifications": "^3.3.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "s-ago": "^2.2.0",
+    "thunk": "^0.0.1",
+    "twrnc": "^3.6.0",
+    "react-native-pager-view": "6.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
