--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-gifted-chat": "^2.1.0",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.7.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
@@ -46,8 +48,7 @@
     "redux-thunk": "^2.4.2",
     "s-ago": "^2.2.0",
     "thunk": "^0.0.1",
-    "twrnc": "^3.6.0",
-    "react-native-pager-view": "6.1.2"
+    "twrnc": "^3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
