--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "rite",
-    "slug": "rite",
+    "name": "Ghost",
+    "slug": "ghost",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
