--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-social-buttons": "^1.2.0",
     "react-native-svg": "13.4.0",
+    "react-native-swipeable-list": "^0.1.2",
     "react-native-tab-view": "^3.5.1",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-vector-icons": "^9.2.0",
