--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rite",
+  "name": "ghost",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "expo": "~48.0.15",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.0",
     "moment": "^2.29.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
