--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sanar/react-native-highlight-text": "^1.0.2",
     "@tanstack/react-query": "^4.29.5",
     "axios": "^1.4.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~48.0.15",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
@@ -30,6 +31,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-gifted-chat": "^2.1.0",
     "react-native-modal": "^13.0.1",
