--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+env.js
 node_modules/
 .expo/
 dist/
@@ -9,8 +10,6 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
-.env
-eas.json
 # macOS
 .DS_Store
 # Temporary files created by Metro to check the health of the file watcher
