--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@tanstack/react-query": "^4.29.5",
     "axios": "^1.4.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "dotenv": "^16.0.3",
     "expo": "~48.0.15",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.0",
+    "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
