--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^9.22.0",
     "fs": "^0.0.1-security",
     "moment": "^2.29.4",
+    "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
