--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
@@ -37,6 +38,7 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-gifted-chat": "^2.1.0",
+    "react-native-google-signin": "^2.1.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.7.0",
